[package]
name = "solana-wallet-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18.26"  # Added this
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
spl-token = "3.5.0"
borsh = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.21"
solana-account-decoder = "1.18"
